# adc-sensor-log-processor

./: .gitignore  CMakeLists.txt  README.md
include/: adc.h  io.h  stats.h
src/: adc.c  io.c  main.c  stats.c
